Fixed retina images on firefox, added some colours

--- a/public_html/compass/_base.scss
+++ b/public_html/compass/_base.scss
@@ -19,16 +19,17 @@ $media-layout:		$desktop-size $desktop-columns lt-ie9;
    ========================================================================== */
 $white:					#fff;
 $black:					#222;
+$orange:				#FFC278;
 
-$qs-feature-color:		#195F88;
+$qs-feature-color:		$orange;
 
 $menu-bg-color:			#2c2c2c;
 $menu-link-color:		$white;
 
 
 $content-bg-color:		#619EC2;
-$content-link-color:	#274D64;
-$content-link-hover-color:	lighten($content-link-color, 5%);
+$content-link-color:	lighten($orange, 10%);
+$content-link-hover-color:	lighten($content-link-color, 20%);
 
 
 $body-bg-color:			#195F88;
